--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #111; /* Darker background color */
+  background-color: #111;
+   /* Darker background color */
   padding: 20px;
   border: 2px solid #00FF00;
   border-radius: 10px;
@@ -48,7 +49,8 @@ body {
 
 /* Style buttons */
 button {
-  background: linear-gradient(45deg, #00FF00, #0A9500); /* Green gradient background */
+  background: linear-gradient(45deg, #00FF00, #0A9500); 
+  /* Green gradient background */
   color: #000;
   font-size: 16px;
   padding: 10px 20px;
